# ckanext-gwexplorer

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/gwexplorer/: actions.py  plugin.py  validators.py
ckanext/gwexplorer/assets/: webassets.yml
ckanext/gwexplorer/assets/css/: gwexplorer.css
ckanext/gwexplorer/assets/js/: main.72fe8104.js  main.a298067b.js  main.a298067b.js.LICENSE.txt  main.a31a7e29.js  script.js
ckanext/gwexplorer/templates/: gwexplorer.html  gwexplorer_form.html  header.html
ckanext/gwexplorer/tests/: test_actions.py  test_plugin.py  test_validators.py
